--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,8 @@ a:active {
   text-decoration: none;
   color: inherit;
 }
+@media screen and ( min-width : 300px ) and ( max-width : 569px ) { 
+  .footer {
+      flex-wrap: wrap;
+  }
+}
