--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  flex-wrap: nowrap;
   color: dimgray;
   background-color: #F88622;
 }
@@ -11,10 +12,17 @@
   justify-content: center;
   color: white;
   padding: 5%;
+  width: 40%;
 }
 
-.imagem {
-    padding: 2%;
+.imagem div{
+    display: flex;
+    width: 40%;
+}
+
+.imagem img{
+    display: flex;
+    width: 100%;
 }
 
 .button {
@@ -26,3 +34,17 @@
 .linkbtn {
     text-decoration: none;
 } 
+
+@media screen and ( min-width : 300px ) and ( max-width : 569px ) { 
+    .imagem div{
+        display: flex;
+        flex: 0 1 auto;
+        width: 100%;
+    }
+    .content {
+        width: 100%;
+    }
+    .main {
+        flex-wrap: wrap;
+    }
+}
