--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,10 @@ footer a:link, a:visited {
   width: 25%;
 }
 
-.mambers {
+/* .mambers {
   display: flex;
   justify-content: space-around;
-}
+} */
 
 header ul li {
   list-style-type: none;
