--- a/src/CSS/calendar.css
+++ b/src/CSS/calendar.css
@@ -2,4 +2,33 @@
   display: flex;
   flex-direction: column;
   margin: 10px;
+  background-color: #f88622;
+  justify-content: center;
+  align-items: center;
+  /* padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 2%; */
+  color: white;
+}
+
+.search-cep {
+  display: flex;
+  padding: 2%;
+}
+
+.button {
+  margin: 2%;
+  border-radius: 0%;
+  border: 0px;
+  padding: 2%;
+  color: #f88622;
+}
+
+.cidade {
+  display: flex;
+  /* flex-direction: column; */
+}
+
+.alterar-cep {
+  width: 100%;
 }
