--- a/src/CSS/pagamento.css
+++ b/src/CSS/pagamento.css
@@ -3,3 +3,10 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+.flex-column {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+}
