--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ footer {
   justify-content: space-between;
   text-decoration: none;
   font-weight: bold;
+  align-content: flex-end;
 }
 
 footer a:link, a:visited {
