--- a/src/CSS/pagamento.css
+++ b/src/CSS/pagamento.css
@@ -1,12 +1,26 @@
 .flex-me {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  padding: 2%;
 }
 
 .flex-column {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
   justify-content: space-around;
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.orange {
+  background-color: #f88622;
+  color: white;
+}
+
+.white {
+  padding: 5%;
+}
+
+label {
+  padding: 4px;
 }
