--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,6 @@ footer a:link, a:visited {
   width: 25%;
 }
 
-/* .mambers {
-  display: flex;
-  justify-content: space-around;
-} */
-
 header ul li {
   list-style-type: none;
   display: inline-block;
@@ -68,7 +63,7 @@ a:active {
 .finalizar {
   display: flex;
   flex-direction: column;
-  color: dimgray;
+  color: white;
   background-color: #F88622;
   padding: 2%;
   text-align: center;
